# caracalcraft

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: main.rs
src/block/: blocks.rs  material.rs  mod.rs  sky_block.rs  step_sound.rs
src/block/material/: burnable.rs  liquid.rs  logic.rs  mod.rs  normal.rs  transparent.rs  types.rs
src/component/: general.rs
src/entity/: mod.rs  nbt.rs  types.rs
src/entity/player/: nbt.rs
src/entity/tile/: nbt.rs
src/item/: nbt.rs
src/map/: mod.rs  nbt.rs  region.rs
src/network/: mod.rs  packet.rs  packet_handler.rs  packet_id.rs  protocol.rs  stream_handler.rs
src/network/serde/: error.rs  serializer.rs
src/noise/: mod.rs  perlin.rs
src/player/: data.rs
