[package]
name = "caracalcraft"
version = "0.1.0"
edition = "2021"
description = "alpha v1.1.2_01 server written in rust"
license = "MIT"
repository = "https://github.com/Metaa4245/caracalcraft"
categories = ["games"]
keywords = ["minecraft", "v1.1.2_01"]

[dependencies]
cesu8 = "1.1.0"
enumn = "0.1.14"
fastnbt = "2.5.0"
flate2 = "1.0.34"
nibble_vec = "0.1.0"
noise = { version = "0.9.0", features = ["std"] }
parry3d = { version = "0.17.1", features = ["serde", "serde-serialize"] }
radix_fmt = "1.0.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros", "net", "io-util"] }

[profile.release]
strip = true
lto = true
codegen-units = 1

[profile.dev]
debug = true
